Fix deco overflow

--- a/src/styles/_deco.scss
+++ b/src/styles/_deco.scss
@@ -3,10 +3,9 @@
   top: 0;
   right: 0;
   z-index: -1;
-
-  @media screen and (max-width: 768px) {
-    display: none;
-  }
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .deco {
@@ -28,8 +27,4 @@
     right: -120px;
   }
   
-}
-
-body {
-  overflow-x: hidden;
 }
